--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body {
     padding-top: 56px;
 }
+.jumbotron {
+    background: url("image.jpg") no-repeat center;
+}
+.btn-primary {
+    background-color: #c60063;
+    border-color: #c60063;
+}
