--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@ body {
     background-color: #c60063;
     border-color: #c60063;
 }
+.btn-secondary {
+    background-color: transparent;
+    border-color: #c60063;
+    color: #c60063;
+}
